--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,10 @@
   "name": "billy-data-fixture-adapter",
   "version": "0.1.0",
   "homepage": "https://github.com/billysbilling/billy-data-fixture-adapter",
-  "main": "src/js/REPLACE-ME.js",
+  "main": "src/fixture-adapter.js",
   "billy-builder": {
     "include": [
-      "src/js",
-      "src/templates"
+      "src"
     ]
   },
   "license": "MIT",
@@ -19,6 +18,7 @@
     "package.json"
   ],
   "dependencies": {
-    "ember": "billysbilling/bower-ember#~1.3.0"
+    "amock": "billysbilling/amock#~1.0.1",
+    "billy-data": "billysbilling/billy-data#~0.11.0"
   }
 }
