--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
   ],
   "dependencies": {
     "amock": "billysbilling/amock#~1.1.0",
-    "billy-data": "billysbilling/billy-data#~0.11.0"
+    "billy-data": "billysbilling/billy-data#>=0.12.0"
   },
   "devDependencies": {
     "sinon": "billysbilling/bower-sinon#~1.7.0"
